# tira-harjoitustyo

./: README.md
dokumentaatio/: Määrittelydokumentti  Määrittelydokumentti.md  Viikkoraportti1.md  maarittely
kivi_paperi_sakset/: pyproject.toml
kivi_paperi_sakset/src/: main.py
